[package]
name = "txp"
version = "0.1.0"
authors = ["Waelwindows <waelwindows@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.1.1"
nom_ext = { path = "/home/waelwindows/rust/nom_ext" }
image = { version = "0.23.4", optional = true }

[dev-dependencies]
structopt = "0.3.14"
anyhow = "1.0.28"
tabwriter = "1.2.1"
