[package]
name = "txp"
version = "0.1.0"
authors = ["Waelwindows <waelwindows@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "txp"
crate-type = ["lib", "dylib"]

[dependencies]
nom = "5.1.1"
nom_ext = { git = "https://github.com/Waelwindows/nom_ext" }
image = { version = "0.23.4", optional = true }
ddsfile = { version = "0.4.0", optional = true }
dcv-color-primitives = { version = "0.1.9", optional = true }
pyo3 = { version = "0.10.1", optional = true }

[dev-dependencies]
structopt = "0.3.14"
anyhow = "1.0.28"
tabwriter = "1.2.1"
